# typesafety-cli

./: .artifacts  .editorconfig  .gitignore  .merlin  .ocp-indent  .travis-ci-install  .travis-ci-install.sh  .travis.yml  Dockerfile  LICENSE  README.md  _oasis  _tags  docker-compose.yml  myocamlbuild.ml  opam  setup.ml  typesafety.opam
.travis/: install  test
examples/: Dockerfile  build  docker-compose-dev.yml  docker-compose.yml  docker-sync.yml  typesafety-build  typesafetysudo
examples/src/: Client.hh  Example.hh  ExampleClient.hh  Request.hh  Response.hh
opam/: descr  opam
src/: Cache.ml  Color.ml  File.ml  HHClient.ml  HHConfig.ml  HHVM.ml  Lines.ml  Log.ml  META  SourceFile.ml  TypecheckerCheck.atd  TypecheckerCheck_j.ml  TypecheckerCheck_j.mli  TypecheckerCheck_t.ml  TypesafetyCheck.ml  TypesafetyMiddleware.ml  TypesafetyReporter.ml  cache.ml  ci_env.ml  color.ml  env.ml  file.ml  hh_client.ml  hhclient.ml  hhvm_version.ml  lines.ml  review_comment.ml  source_file.ml  typechecker_check.atd  typechecker_check_j.ml  typechecker_check_j.mli  typechecker_check_t.mli  typesafety.ml  typesafety.mldylib  typesafety.mllib  typesafety_check.ml  typesafety_middleware.ml  typesafety_reporter.ml  typesafety_review.ml
src/cli/: .merlin  META  dune  jbuild  typesafety.mldylib  typesafety.mllib  typesafety_check.ml  typesafety_check.mli  typesafety_ci_service.ml  typesafety_ci_service.mli  typesafety_cli.mldylib  typesafety_github.ml  typesafety_github.mli  typesafety_hhvm.ml  typesafety_hhvm.mli  typesafety_report.ml  typesafety_report.mli  typesafety_reporter.ml
src/env/: .merlin  META  ci_detector.ml  ci_detector.mli  ci_env.ml  ci_env.mli  ci_service_env.ml  ci_service_env.mli  dune  env.ml  env.mldylib  env.mllib  env_adapter.mli  github_env.ml  github_env.mli  jbuild  sys_env.ml  sys_env.mli  typesafety_ci.mldylib
src/github/: .merlin  META  dune  github.ml  github.mli  jbuild
src/hack/: .merlin  META  dune  hack.mldylib  jbuild  source_cache.ml  source_cache.mli  source_file.ml  source_file.mli  source_lines.ml  source_lines.mli  typesafety_hack.mldylib
src/hhvm/: .merlin  META  dune  hh_client.ml  hh_client.mli  hh_config.ml  hh_config.mli  hhvm.ml  (+9 more)
src/review/: .merlin  META  comment_buffer.ml  comment_buffer.mli  dune  github.atd  github.ml  github_client.ml  github_client.mli  github_j.ml  github_j.mli  github_review.ml  github_review.mli  github_t.ml  github_t.mli  http_client.ml  http_client.mli  jbuild  review.ml  review_comment.ml  review_comment.mli  typesafety_review.mldylib  typesafety_review.mllib
tests/: .merlin  HHConfigTest.ml  HHVMTest.ml  HHVMVersionTest.ml  SourceFileTest.ml  Test.ml  TypesafetyMiddlewareTest.ml  TypesafetyReporterTest.ml  circle_ci_test.ml  dune  general_test.ml  github_j_test.ml  hh_config_test.ml  hhvm_test.ml  hhvm_version_test.ml  jbuild  lines_test.ml  review_comment_test.ml  source_file_test.ml  source_lines_test.ml  template.ml  test.ml  test_helper.ml  travis_test.ml  typesafety_middleware_test.ml  typesafety_report_test.ml  typesafety_reporter.ml  typesafety_reporter_test.ml
(+37 files in other folders)
