opam-version: "1.2"
name: "typesafety"
version: "0.10.0"
maintainer: "Noritka Horio <holy.shared.design@gmail.com>"
authors: [ "Noritka Horio <holy.shared.design@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/hhpack/typesafety-cli"
dev-repo: "git://github.com/hhpack/typesafety-cli.git"
bug-reports: "https://github.com/hhpack/typesafety-cli/issues"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: [
  "jbuilder" {build}
  "atdgen" {>= "1.12.0"}
  "base-threads"
  "cmdliner" {build & >= "1.0.0"}
  "cohttp" {>= "1.0.0"}
  "cohttp-lwt-unix" {>= "1.0.0"}
  "lwt" {>= "3.1.0"}
  "lwt_ssl" {>= "1.1.0"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {test & >= "2.0.0"}
]
available: [ ocaml-version >= "4.05.0" ]
