(library
  (public_name typesafety.review)
  (name review)
  (libraries
    str
    lwt
    tls
    atdgen
    cohttp
    cohttp-lwt
    cohttp-lwt-unix
    typesafety.github
    typesafety.misc
    typesafety.env
    typesafety.hack
    typesafety.typechecker
  )
)

(rule
  (targets github_j.ml github_j.mli)
  (deps github.atd)
  (action (run %{bin:atdgen} -j %{deps}))
)

(rule
  (targets github_t.ml github_t.mli)
  (deps github.atd)
  (action (run %{bin:atdgen} -t %{deps}))
)
